<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        >
    <LinearLayout
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="fill_vertical"

    >
        <TextView
            android:id="@+id/expression"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="fill_vertical"
            android:text="@string/_0"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_0"
            android:layout_weight="1"
            android:gravity="fill_vertical|end"
            android:textSize="30sp"
            />
    </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/screen"
            android:stretchColumns="*"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/screen">

            <TableRow
                android:gravity="center"
                android:layout_weight="1"
                >

                <Button
                    android:id="@+id/divide"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="/"
                    android:textSize="30sp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/operator"

                    />
                <Button
                    android:id="@+id/multiply"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="*"
                    android:textSize="30sp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/operator"

                    />
                <Button
                    android:id="@+id/minus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="-"
                    android:textSize="30sp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/operator"

                    />

                <Button
                    android:id="@+id/plus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="+"
                    android:textSize="30sp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/operator"

                    />

            </TableRow>

            <TableRow
                android:gravity="center"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/seven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="7"
                    android:textSize="30sp"
                    android:layout_margin="5dp"/>
                <Button
                    android:id="@+id/eight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="8"
                    android:textSize="30sp"
                    android:layout_margin="5dp"/>
                <Button
                    android:id="@+id/nine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="9"
                    android:textSize="30sp"
                    android:layout_margin="5dp"/>
            </TableRow>

            <TableRow
                android:gravity="center"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/four"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="4"
                    android:textSize="30sp"
                    android:layout_margin="5dp"/>
                <Button
                    android:id="@+id/five"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="5"
                    android:textSize="30sp"
                    android:layout_margin="5dp"/>
                <Button
                    android:id="@+id/six"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="6"
                    android:textSize="30sp"
                    android:layout_margin="5dp"/>

            </TableRow>

            <TableRow
                android:gravity="center"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/one"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="1"
                    android:textSize="30sp"
                    android:layout_margin="5dp"/>
                <Button
                    android:id="@+id/two"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="2"
                    android:textSize="30sp"
                    android:layout_margin="5dp"/>
                <Button
                    android:id="@+id/three"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="3"
                    android:textSize="30sp"
                    android:layout_margin="5dp"/>
            </TableRow>
            <TableRow
                android:gravity="center"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/clear"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="C"
                    android:textSize="30sp"
                    android:backgroundTint="@color/clearButton"

                    android:layout_margin="5dp"/>
                <Button
                    android:id="@+id/dot"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="."
                    android:textSize="30sp"
                    android:backgroundTint="@color/operator"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/zero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="0"
                    android:textSize="30sp"
                    android:layout_margin="5dp"/>

                <Button
                    android:id="@+id/equals"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="="
                    android:textSize="30sp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/equalButton"

                    />


            </TableRow>


        </TableLayout>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>